--- a/iot_smart-agri/.env
+++ b/iot_smart-agri/.env
@@ -1,12 +1,12 @@
 # MQTT Configuration (HiveMQ Cloud)
-MQTT_BROKER=8bdab109d0bb40488ea12244f162c3b1.s1.eu.hivemq.cloud
+MQTT_BROKER=0a0ac7e092d04bffbb24e751fb478d6d.s1.eu.hivemq.cloud
 MQTT_PORT=8883
 MQTT_TOPIC=sensor-data
-MQTT_USERNAME=iot_mq
-MQTT_PASSWORD=Abc@1234
+MQTT_USERNAME=quynhthu
+MQTT_PASSWORD=Hello@123
 
 # Kafka Configuration
-KAFKA_BOOTSTRAP=kafka:9092
+KAFKA_BOOTSTRAP=kafka:29092
 KAFKA_TOPIC=sensor-data
 
 # ===== Dataset =====
