--- a/iot_smart-agri/docker-compose.yml
+++ b/iot_smart-agri/docker-compose.yml
@@ -3,17 +3,23 @@ services:
     image: confluentinc/cp-kafka:7.5.0
     container_name: kafka
     environment:
-      - KAFKA_BROKER_ID=1
-      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
-      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
-      - KAFKA_LISTENERS=PLAINTEXT://:9092
-      - KAFKA_AUTO_CREATE_TOPICS_ENABLE=true
-      - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
     ports:
       - "9092:9092"
     depends_on:
       - zookeeper
     networks: [agri]
+    healthcheck:
+      test: ["CMD", "kafka-topics", "--bootstrap-server", "localhost:9092", "--list"]
+      interval: 10s
+      timeout: 10s
+      retries: 5
 
   zookeeper:
     image: confluentinc/cp-zookeeper:7.5.0
@@ -52,6 +58,18 @@ services:
     command: python /app/scripts/mqtt_kafka_bridge.py
     depends_on:
       - kafka
+    networks: [agri]
+
+  spark-processor:
+    build:
+      context: .
+      dockerfile: ./spark/Dockerfile
+    container_name: spark-processor
+    depends_on:
+      kafka:
+        condition: service_healthy  
+      bridge:
+        condition: service_started
     networks: [agri]
 
 networks:
