dự đoán PDI, NDI
lưu mode of label từng batch, lưu vào mongodb với collection: predictions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,6 +71,8 @@ services:
       - smart-agri-net
     volumes:
       - ./Scripts:/opt/bitnami/spark/Scripts
+      - ./models:/opt/bitnami/spark/models
+      - ./data:/opt/bitnami/spark/data
     command: 
      bash -c " pip install pymongo"
 
