--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,9 +21,15 @@ services:
     image: wurstmeister/kafka
     ports:
       - "9092:9092"
+      - "9093:9093"
     environment:
-      KAFKA_ADVERTISED_HOST_NAME: kafka
+      KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENERS: INSIDE://:9092,OUTSIDE://:9093
+      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9092,OUTSIDE://localhost:9093
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     depends_on:
       - zookeeper
     networks:
@@ -61,7 +67,7 @@ services:
 
   # Spark Master
   spark-master:
-    image: bitnami/spark:3.5.0
+    build: .
     environment:
       - SPARK_MODE=master
     ports:
@@ -73,9 +79,7 @@ services:
       - ./Scripts:/opt/bitnami/spark/Scripts
       - ./models:/opt/bitnami/spark/models
       - ./data:/opt/bitnami/spark/data
-    command: 
-     bash -c " pip install pymongo"
-
+    # --packages org.apache.spark:spark-sql-kafka-0-10_2.12:3.5.0 
 
   # Spark Worker
   spark-worker:
